--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@yudiel/react-qr-scanner": "^2.1.0",
     "peerjs": "^1.5.4",
     "qrcode-generator": "^1.4.4",
     "react": "^18.3.1",
