--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
           # SSH into instance and restart the service
           ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.SSH_USER }}@${{ secrets.GCE_INSTANCE_NAME }} << 'EOF'
             cd /var/www/streamit
-            git pull --rebase origin main
             docker compose down
+            sudo git pull --rebase origin main
             docker compose up -d --build
           EOF
 
